--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
 			margin:0;
 			padding:0;
 			overflow: hidden;
+			background-color: #000;
 		}
 		canvas {
 			margin:auto;
+		}
+		p {
+			font-family: 'Helvetica', sans-serif;
+			font-weight: 100;
+			letter-spacing: 1px;
+			color: #222;
+			padding-left:1em;
 		}
 	</style>
 </head>
